--- a/Doku/Bericht/2-theory/2-theory.tex
+++ b/Doku/Bericht/2-theory/2-theory.tex
@@ -4,5 +4,8 @@
 \input{2-theory/e-paper-display/e-paper-display.tex}
 
 \section{wake up interrupt}
+\acf{ble}\\
+\acs{ble}\\
+\acl{ble}
 
 \section{software grafik zeichen}
