--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -27,11 +27,11 @@
 \usepackage{tikz}
 \usepackage{pdfpages}
 
+%für Querformat von zeitplan
 \usepackage{pdflscape}
 
-\usepackage{tabularx}
-
-%\usepackage{acronym}
+%für Abbreviations
+\usepackage{acronym}
 
 %figure float
 \usepackage{float}
@@ -79,7 +79,7 @@
 \vspace*{10pt}
 \begin{flushright}
 {\Huge
-Low Power WakeUp-Receiver}
+Low Power Wakeup-Receiver}
 
 %\Large{with Rotation, GPS and On-Board-Diagnostics Sensor Data}
 \end{flushright}
