--- a/Doku/Bericht/references.bib
+++ b/Doku/Bericht/references.bib
@@ -60,6 +60,21 @@
 	keywords = {manual}
 }
 
+@manual{as3933,
+	organisation = {AMS},
+	title =  {{AS3933 3D Low Frequency Wakeup Receiver}},
+	year          =  2015,
+	month = 03,
+	keywords = {manual}
+}
+
+@manual{rficient,
+	organisation = {Fraunhofer-Institut für Integrierte Schaltungen},
+	title =  {{RFicient ULTRA-LOW POWER  WAKE-UP RECEIVER  DATASHEET (preliminary)}},
+	year          =  2019,
+	keywords = {manual}
+}
+
 
 
 
