--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -4,7 +4,7 @@
 In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to room entrances.
 These schedules are mostly printed on paper, or in more modern buildings, displayed on a screen.
 Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule.
-Screens on the other hand need either to be connected to a power supply, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time.
+Screens on the other hand need either to be connected to a power supply, which entails extensive installation work, or are powered by a battery, which needs to be replaced from time to time.
 All these disadvantages could be avoided by using a screen which harvests its energy from the indoor light, and is updated via a wireless interface.
 The screen should therefore be completely wireless, which simplifies the installation.
 
