--- a/Doku/Bericht/2-theory/2-theory.tex
+++ b/Doku/Bericht/2-theory/2-theory.tex
@@ -1,6 +1,6 @@
 \chapter{Theory}
 
-\section{Microencapsulated Electrophoretic Displays}
+\section{E-Paper Display}
 \input{2-theory/e-paper-display/e-paper-display.tex}
 
 \section{wake up interrupt}
