--- a/Doku/Bericht/3-evaluation/3-evaluation.tex
+++ b/Doku/Bericht/3-evaluation/3-evaluation.tex
@@ -11,9 +11,10 @@ This section first introduces both products, before comparing them with a series
 The AS3933 is a low frequency wakeup receiver, which uses \acs{ask} to modulate a carrier frequency between 15-150\,kHz.
 The transmitter sends a manchester encoded, programmable wakeup pattern of length 16 or 32 bit.
 If this pattern is detected on the receiver end, a wakeup interrupt is generated.
-More important features on receiver end are:
+It is also possible to disable the the pattern decoder to run the chip in a frequency detection mode, where a wakeup interrupt is generated as soon as any pattern on the specified frequency is received.
+More important features on the receiver end are:
 \begin{itemize}
-	\item[-] Receiver sensitivity $80\,\mu\text{VRMS}$ (equivalent to $-68.93\,\text{dBm}$)
+	\item[-] Receiver sensitivity $80\,\mu\text{V$_{\text{RMS}}$}$
 	\item[-] Current consumption in 3-channel listening mode $2.3\,\mu\text{A}$
 	\item[-] Operating supply range $2.4\,\text{V}-3.6\,\text{V}$
 	\item[-] Three antennas (enables 3D detection)
@@ -22,17 +23,14 @@ More important features on receiver end are:
 The low power consumption makes it possible run the receiver in listening mode below $8.3\,\mu\text{W}$\cite{as3933}.
 
 The demo kit comes with a \acs{gui}, which enables the user to set the parameters as desired.
-First trials showed, that only one of the  three antennas seemed to work.
-According to the manual, it should have been possible to activate the other two channels as well, but the in the demo kit included \acs{gui} did not provide this option.
-Consulting the technical support of AMS was unfortunately of no use.
-Therefore all test were made with only one channel as good as possible.
 
 \subsection{RFicient}
 The Rficient from the \acs{fraun} uses \acs{ook} to modulate a 868\,MHz signal.
 It can either run in pure wakeup mode, where the receiver generates an interrupt as soon as a code is received or a selective mode, where a 16 bit wakeup preamble needs to match the receiver. 
 After the preamble is detected, the data rate can be changed to transfer more bits which can be sent over an \acs{spi}-bus to a connected device.
+This way, it is possible to transmit data bits after the actual wakeup.
 Data rates can be set in a range between $256\,\text{bp/s}-32\,\text{kbp/s}$.
-the most important features are:
+The most important features are:
 \begin{itemize}
 	\item[-] Receiver sensitivity -80\,dBm
 	\item[-] Energy consumption $3\,\mu\text{A}$ at $1.5\,\text{V}$ (data rate 1 kbit/s)
@@ -43,3 +41,16 @@ The power consumption therefore is in listening mode (data rate = 1 kb/s) $4.5\,
 Just as the AS3933, the RFicient demo kit comes with a \acs{gui}, which enables the user to set the important parameters and even access the register directly \cite{rficient}.
 
 \subsection{Test run in realistic environments}
+It is not easy to compare the two wakeup receivers directly, since one operates in the 
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{3-evaluation/graphics/env1.jpg}
+	\caption{Test environment 1 (filler)\label{evaluation:env1}}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{3-evaluation/graphics/env2.jpg}
+	\caption{Test environment 2 (filler)\label{evaluation:env2}}
+\end{figure}
