--- a/Doku/Bericht/1-intro/1-intro.tex
+++ b/Doku/Bericht/1-intro/1-intro.tex
@@ -1,3 +1,13 @@
 \chapter{Introduction}
+In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to room entrances.
+These schedules are mostly printed on paper, or in more modern buildings, displayed on a screen.
+Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule.
+Screens on the other hand need either to be connected to a power supply, which entails extensive installation work, or are powered by a battery, which needs to be replaced from time to time.
+All these disadvantages could be avoided by using a screen which can be updated wireless and need no connection to 
 
-\section{bla}
+
+
+
+\section{Goal}
+
+\section{Task analysis}
