--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -1,3 +1,42 @@
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/Blockschaltbild.pdf}
+	\caption{not up to date block\label{hardware:block}}
+\end{figure}
+
+\subsection{RFicient}
+The Rficient demo kit comes, as previously statet with a \acs{gui}.
+
+Is the transceiver module connected, simple steps make it possible, to set the preamble and payload data rate and the payload itself which can partly serve as an ID and transmitted data.
+The power of the transmission can also be set between -30\,dBm an 10\,dBm.
+the transceiver-\acs{gui} is shown in figure \ref{development:tx}.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/TXgui.png}
+	\caption{TX GUI\label{development:tx}}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/RXgui.png}
+	\caption{RX GUI\label{development:rx}}
+\end{figure}
+
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env1.jpg}
+	\caption{Test environment 1 (filler)\label{development:env1}}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env2.jpg}
+	\caption{Test environment 2 (filler)\label{development:env2}}
+\end{figure}
+
+
 \subsection{Energy Harvesting}
 The screen should be self-sustaining, thus some sort of energy-harvesting unit is needed.
 It was apparent to choose light as the energy source, since the screen will be used in rooms, that are artificially illuminated most of the time.
@@ -54,7 +93,7 @@ Figure \ref{development:test} shows the layout of the test setup.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/testaufbau.pdf}
-	\caption{Layout of the test setup\label{development:test}}
+	\caption{Schematics of the test setup\label{development:test}}
 \end{figure}
 
 To carry out these measurements, it is first necessary to adjust the minimal and maximal voltage of the ADP5090.
