--- a/Doku/Bericht/4-development/4-development.tex
+++ b/Doku/Bericht/4-development/4-development.tex
@@ -6,6 +6,7 @@
 \section{Hardware}
 \input{4-development/hardware/hardware.tex}
 
+\newpage
 \section{Software}
 \input{4-development/software/software.tex}
 
