--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -1,4 +1,4 @@
-\begin{figure}[ht]
+-t\begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/1.png}
 	\caption{not up to date sequence\label{software:sequence}}
