--- a/Doku/Bericht/1-intro/1-intro.tex
+++ b/Doku/Bericht/1-intro/1-intro.tex
@@ -1,3 +1,16 @@
 \chapter{Introduction}
+In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to room entrances.
+These schedules are mostly printed on paper, or in more modern buildings, displayed on a screen.
+Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule.
+Screens on the other hand need either to be connected to a power supply, which entails extensive installation work, or are powered by a battery, which needs to be replaced from time to time.
+All these disadvantages could be avoided by using a screen which can be updated wireless and is in itself autarkic.
+The goal of this semester thesis is to develop a functional prototype of such a schedule.
 
-\section{bla}
+\section{Task analysis}
+The prototype should combine both the advantages of the paper method and the screen.
+Updating should happen via a wireless interface while a expensive installation should be avoided.
+The screen should therefore be placed on the desired location  just like a paper schedule.
+To consume as low power as possible, the microcontroller, display and interface should be switched off when not needed.
+
+\section{Approach}
+
