--- a/Doku/Bericht/2-theory/2-theory.tex
+++ b/Doku/Bericht/2-theory/2-theory.tex
@@ -1,11 +1,9 @@
 \chapter{Theory}
 
-\section{Microencapsulated Electrophoretic Displays}
+\section{E-Paper Display}
 \input{2-theory/e-paper-display/e-paper-display.tex}
 
-\section{wake up interrupt}
-\acf{ble}\\
-\acs{ble}\\
-\acl{ble}
+\section{Wakeup Receiver}
+\input{2-theory/wakeup/wakeup.tex}
 
 \section{software grafik zeichen}
