--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -1,4 +1,4 @@
-%mhbn u.ib.h%
+%
 % skript.tex -- Lecture notes for the PartDiff lectures given at the
 %               MSE Master
 %
@@ -22,7 +22,8 @@
 \usepackage{txfonts}
 \usepackage[all]{xy}
 \usepackage{paralist}
-\usepackage[colorlinks=true]{hyperref}
+%\usepackage[colorlinks=true]{hyperref}
+\usepackage{hyperref}
 \usepackage{array}
 \usepackage{tikz}
 \usepackage{pdfpages}
