--- a/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
+++ b/Doku/Bericht/2-theory/e-paper-display/e-paper-display.tex
@@ -7,7 +7,7 @@ This setup is shown in figure \ref{theory:capsules}.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/capsules.png}
+	\includegraphics[width=0.9\textwidth]{2-theory/e-paper-display/graphics/capsules.pdf}
 	\caption{filler pic\label{theory:capsules}}
 \end{figure}
 
