--- a/Doku/Bericht/2-theory/wakeup/graphics/wake_comp.tex
+++ b/Doku/Bericht/2-theory/wakeup/graphics/wake_comp.tex
@@ -75,7 +75,7 @@
 	\draw [arrow, bend left] (1.6,0.9-\sh) to (2.5,0.3-\sh);
 	\node[left] at (1.8,0.9-\sh) {\scriptsize listening};
 	\draw[gray] (3.4,0.4-\sh) circle (2.5pt);
-	\draw [arrow, bend left] (4.1,0.9-\sh) to (3.4,0.4-\sh);
+	\draw [arrow, bend right] (4.1,0.9-\sh) to (3.4,0.4-\sh);
 	\node[right] at (3.9,0.9-\sh) {\scriptsize wake up};
 	
 	
