--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -1,7 +1,7 @@
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/Blockschaltbild.pdf}
-	\caption{not up to date block\label{hardware:block}}
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/top/top_schematics.pdf}
+	\caption{Receiver schematics\label{hardware:block}}
 \end{figure}
 
 \subsection{RFicient}
